[package]
name = "lightbox"
version = "0.1.0"
authors = ["James Stuart <james.stuart@ieee.org>"]
description = "Light Box Puzzle - a basic library and terminal interface for a light box puzzle"
categories = ["games"]
repository = "https://github.com/jamesdstuart/lightbox"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
clap = "2"